test/modules/bradc/configParamNoUse.good
configParamNoUse.chpl:12: error: symbols in module 'M1' must be visible at point of module access
